--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-router-dom": "4.2.2",
     "react-select": "1.2.1",
     "react-table": "6.8.2",
+    "react-tabs": "2.2.2",
     "react2angular": "3.2.1",
     "reactstrap": "5.0.0",
     "redux": "4.0.0",
